<resources>
    <string name="app_name">common_lib</string>
    <string name="default_no_data">暂无数据</string>
    <string name="default_cancel">取消</string>
    <string name="txt_confirm">确定</string>
    <string name="default_confirm">确认</string>
    <string name="video_url_error">视频地址有误</string>
    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_password_input_hint">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    //设置
    <string name="setting_title">设置</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_language_switch">语言切换</string>
    <string name="setting_user_info">个人信息</string>
    <string name="setting_phone">修改手机</string>
    <string name="setting_password">修改密码</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>


    <string name="default_agree">同意</string>
    <string name="disagree_to_basics_function">不同意进入基本功能模式</string>

    <string name="ageement_text">用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策用户协议隐私政策</string>
    <string name="default_loading">加载中</string>
    <string name="video_start_time">00:00</string>
    <string name="video_load_failed">视频加载失败</string>
    <string name="click_to_retry">点击重试</string>


</resources>